기본 API 및 리팩토링
나만의참고.md에 코드작성 규칙에 맞는 리팩토링